; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vm_exitinfo.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vm_exitinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_exit = type { i32 }
%struct.vm = type { %struct.vcpu* }
%struct.vcpu = type { %struct.vm_exit }

@VM_MAXCPU = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"vm_exitinfo: invalid cpuid %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vm_exit* @vm_exitinfo(%struct.vm* %0, i32 %1) #0 {
  %3 = alloca %struct.vm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vcpu*, align 8
  store %struct.vm* %0, %struct.vm** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @VM_MAXCPU, align 4
  %11 = icmp sge i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %8, %2
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @xhyve_abort(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %12, %8
  %16 = load %struct.vm*, %struct.vm** %3, align 8
  %17 = getelementptr inbounds %struct.vm, %struct.vm* %16, i32 0, i32 0
  %18 = load %struct.vcpu*, %struct.vcpu** %17, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.vcpu, %struct.vcpu* %18, i64 %20
  store %struct.vcpu* %21, %struct.vcpu** %5, align 8
  %22 = load %struct.vcpu*, %struct.vcpu** %5, align 8
  %23 = getelementptr inbounds %struct.vcpu, %struct.vcpu* %22, i32 0, i32 0
  ret %struct.vm_exit* %23
}

declare dso_local i32 @xhyve_abort(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
